package dev.jetclient.module;

public enum Category {
    MOVEMENT,
    COMBAT,
    WORLD,
    PLAYER,
    MISC,
    OVERLAY
}
