@startuml

namespace minecraft {
class Minecraft
class GuiScreen
class GuiChat
class GuiIngame
class RenderGlobal
}

namespace command {
class Command {
    + getCommandName()
    + getCommand()
    + getUsage()
    + printUsage()
    + printMessage(String message)
    + executeCommand(String[] args)
}

namespace commands {
class ChangeKeybind {
    + executeCommand()
}
}

class CommandManager {
    + getPrefix()
    + decodeCommand()
    + getCommands()
}
}

namespace gui {
namespace screens {
namespace modulegui {
class Panel {
    + drawScreen(int mouseX, int mouseY)
    + mouseClicked(int mouseX, int mouseY, int mouseButton)
    + mouseReleased(int mouseX, int mouseY, int state)
}

class PanelManager {
    + drawPanels()
    + mouseClicked()
    + mouseReleased()
}
class ModuleGui {
    + drawScreen(int mouseX, int mouseY, int partialTicks)
    + mouseClicked(int mouseX, int mouseY, int mouseButton)
    + mouseReleased(int mouseX, int mouseY, int state)
}
}

class AltLogin {
    + drawScreen(int mouseX, int mouseY, float partialTicks)
}

class Settings {
    + drawScreen(int mouseX, int mouseY, float partialTicks)
}
}

class GuiScreenManager {
    + handleKeyEvent(int keyCode)
    + displayAltLogin()
}

class HotkeyScreen {
    + getKeyCode()
}
}

namespace overlay {
class OverlayElement {
    + onRender2D()
}

namespace elements {
class ModuleList {
    + onRender2D()
}
}

class OverlayElementManager {
    + onRender2D()
}
}

namespace keybinds {
class KeybindHandler {
    + onKeyPressed(int keyCode)
}
}

namespace module {
class Module {
    + getName()
    + getKeyBind()
    + setKeyBind(int keyBind)
    + getCategory()
    + getSettings()
    + onEnable()
    + onDisable()
    + onUpdate()
}

namespace setting {
class Setting {
    + getActive()
    + setActive(boolean active)
    + getName()
    + handleClick(int mouseX, int mouseY)
    + draw(int x, int y)
}

namespace settings {
class SliderSetting {
    + handleClick(int mouseX, int mouseY)
    + draw(int x, int y)
    + getSliderVal()
}
}
}

namespace type {
class Render3DModule {
    + onRender3D(float partialTicks)
}

class Render2DModule {
    + onRender2D()
}

class RuntimeModule {
    + onUpdate()
    + onEnable()
    + onDisable()
}
}

namespace modules {
namespace player {
class ChestStealer {
    + onEnable()
    + onDisable()
    + onUpdate()
}
}

namespace world {
class ChestESP {
    + onRender3D(float partialTicks)
}
}
}

class ModuleManager {
    + getModules()
    + getActiveModules()
    + onUpdate()
    + handleKeyEvent(int keyCode)
    + getModuleByName(String module)
    + toggleModule(Module module)
    + getModulesByCategory()
    + onRender3D(float partialTicks)
    + isModuleActive(String module)
}

enum Category {
    PLAYER
    WORLD
    COMBAT
    MOVEMENT
}
}

namespace utils {
class MessagePrinter {
    + printMessage(String message)
}
}

Minecraft ..> ModuleManager
Minecraft ..> KeybindHandler
RenderGlobal ..> ModuleManager
GuiChat ..> CommandManager
GuiIngame ..> OverlayElementManager
GuiIngame ..> ModuleManager
GuiScreenManager ..> "*" GuiScreen
ModuleGui ..|> HotkeyScreen
HotkeyScreen ..|> GuiScreen
Settings ..|> GuiScreen
Settings ..> OverlayElementManager
AltLogin ..|> GuiScreen
ModuleManager ..> "*" Module
Module ..> Category
Module ..> "*" Setting
Render3DModule ..|> Module
RuntimeModule ..|> Module
Render2DModule ..|> Module
KeybindHandler ..> ModuleManager
KeybindHandler ..> GuiScreenManager
Panel ..> "*" Module
ModuleGui ..> PanelManager
PanelManager ..> "*" Panel
OverlayElementManager ..> "*" OverlayElement
CommandManager ..> "*" Command
Command ..> ModuleManager
Command ..> MessagePrinter
ChangeKeybind ..|> Command
ModuleList ..|> OverlayElement
ModuleList ..> "*" Module
ChestStealer ..|> RuntimeModule
ChestESP ..|> Render3DModule
SliderSetting ..|> Setting

@enduml
